<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="0dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/banner_thechosen"
        android:layout_width="403dp"
        android:layout_height="228dp"
        app:srcCompat="@drawable/the_chosen_1"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="42dp" />

    <TextView
        android:id="@+id/thechosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/netflixsans_bold"
        android:text="@string/the_chosen"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="270dp" />


    <TextView
        android:id="@+id/ano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/netflixsans_light"
        android:text="@string/doismilevintetres"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="314dp" />

    <TextView
        android:id="@+id/temporadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/netflixsans_light"
        android:text="@string/trestemporadas"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="314dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_assistir"
        style="@style/Botao_Assistir"
        android:layout_width="408dp"
        android:text="@string/assistir"
        android:textAllCaps="false"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="341dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_download"
        style="@style/Botao_Download"
        android:layout_width="408dp"
        android:text="@string/baixar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="401dp" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/netflixsans_bold"
        android:text="@string/titulo"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="455dp" />

    <TextView
        android:id="@+id/descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/netflixsans_light"
        android:text="@string/descricao"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:layout_editor_absoluteY="485dp" />

    <TextView
        android:id="@+id/atores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/netflixsans_light"
        android:text="@string/atores"
        android:textColor="@color/light_gray"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="558dp" />

    <TextView
        android:id="@+id/estrelando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/netflixsans_bold"
        android:text="@string/estrelando"
        android:textColor="@color/light_gray"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="558dp" />

    <TextView
        android:id="@+id/criacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/netflixsans_bold"
        android:text="@string/criacao"
        android:textColor="@color/light_gray"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="577dp" />

    <TextView
        android:id="@+id/diretor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/netflixsans_light"
        android:text="@string/diretor"
        android:textColor="@color/light_gray"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="577dp" />

    <TextView
        android:id="@+id/reproducao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/netflixsans_bold"
        android:text="@string/reproducao"
        android:textColor="@color/light_gray"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="595dp" />

    <TextView
        android:id="@+id/erik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/netflixsans_light"
        android:text="@string/erik"
        android:textColor="@color/light_gray"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="595dp" />

    <ImageView
        android:id="@+id/classificacao"
        android:layout_width="27dp"
        android:layout_height="22dp"
        app:srcCompat="@drawable/classificacao"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="315dp" />

    <ImageView
        android:id="@+id/hd"
        android:layout_width="18dp"
        android:layout_height="22dp"
        app:srcCompat="@drawable/hd"
        app:tint="@color/white"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="315dp" />

    <Button
        android:id="@+id/minha_lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_adicionar"
        android:padding="0dp"
        android:text="@string/minha_lista"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:iconPadding="0dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="635dp" />

    <Button
        android:id="@+id/classificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_classificar"
        android:padding="0dp"
        android:text="@string/classificar"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:iconPadding="0dp"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="635dp" />

    <Button
        android:id="@+id/compartilhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_compartilhe"
        android:padding="0dp"
        android:text="@string/compartilhe"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:iconPadding="0dp"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="635dp" />

    <Button
        android:id="@+id/baixartemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_baixartemp"
        android:padding="0dp"
        android:text="@string/baixartemp"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:iconPadding="0dp"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="621dp" />


</androidx.constraintlayout.widget.ConstraintLayout>